test/fails/bad_types/par_basics1.lgl
tag a is vec2;
tag par<`t : vec2> is vec3;

void main() {
    par<a> fail = [1., 2.]; // Wrong dimensions
}